--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "astro build"
   },
   "devDependencies": {
-    "astro": "^0.18.0-next.1"
+    "astro": "^0.18.0-next.1",
+    "tailwindcss": "^2.2.4"
   }
 }
