--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "astro build"
   },
   "devDependencies": {
-    "astro": "^0.18.0-next.1",
-    "tailwindcss": "^2.2.4"
+    "astro": "^0.18.8",
+    "tailwindcss": "^2.2.7"
+  },
+  "snowpack": {
+    "workspaceRoot": "../.."
   }
 }
