--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build"
   },
   "devDependencies": {
-    "astro": "^0.18.8",
+    "astro": "^0.18.9",
+    "@astrojs/renderer-solid": "0.1.0",
     "tailwindcss": "^2.2.7"
   },
   "snowpack": {
