Global Style | Increase Constrast

--- a/src/data/committee.yml
+++ b/src/data/committee.yml
@@ -43,3 +43,6 @@ Festival Artwork:
 Graphic Designer:
   name: Katie
   image_url: https://ik.imagekit.io/thegoldendino/hfw/people/katie_9x6iEmAcXIM.jpg?updatedAt=1628552102225
+Website:
+  name: Dwight
+  image_url: https://ik.imagekit.io/thegoldendino/hfw/people/lazer-dwight_qDmJ89KI9.png?updatedAt=1628555952814
