--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,19 +14,33 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - { label: 'Order', name: 'order', widget: 'number' }
+      - {
+          label: 'Home Page Order (blank to leave off home page)',
+          name: 'order',
+          widget: 'number',
+        }
       - {
           label: 'Type',
           name: 'type',
           widget: 'select',
-          options: ['event'],
-          default: 'event',
+          options: ['Event'],
+          default: ['Event'],
         }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Subtitle', name: 'subtitle', widget: 'string' }
       - { label: 'Image URL', name: 'image_url', widget: 'string' }
-      - { label: 'Start Time', name: 'start_time', widget: 'datetime' }
-      - { label: 'End Time', name: 'end_time', widget: 'datetime' }
+      - {
+          label: 'Start Date/Time',
+          name: 'start_datetime',
+          widget: 'datetime',
+          format: 'MMMM DD, YYYY hh:mm',
+        }
+      - {
+          label: 'End Date/Time (>= 23 hrs from start to make time blank)',
+          name: 'end_datetime',
+          widget: 'datetime',
+          format: 'MMMM DD, YYYY hh:mm',
+        }
       - {
           label: 'Location Display',
           name: 'location_display',
@@ -37,7 +51,7 @@ collections:
           label: 'More Display',
           name: 'more_display',
           widget: 'string',
-          default: '',
+          default: 'Event Website',
         }
       - { label: 'External URL', name: 'external_url', widget: 'string' }
       - { label: 'Content', name: 'body', widget: 'markdown' }
