--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,11 +8,21 @@ media_folder: 'public/assets/images/uploads'
 public_folder: '/assets/images/uploads'
 
 collections:
-  - name: 'posts' # Used in routes, e.g., /admin/collections/blog
+  - name: 'posts' # Used in routes, e.g., /admin/collections/posts
     label: 'Posts' # Used in the UI
+    label_singular: 'Post'
     folder: 'src/pages/posts' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{year}}-{{month}}-{{day}}-{{fields.title}}_{{fields.subtitle}}' # Filename template, e.g., YYYY-MM-DD-title.md
+    preview_path: 'posts/{{filename}}'
+    sortable_fields: ['order', 'start_datetime']
+    view_filters:
+      - label: 'Home Page'
+        field: order
+        pattern: \d+
+      - label: 'Events'
+        field: type
+        pattern: 'Event'
     fields: # The fields for each document, usually in front matter
       - {
           label: 'Home Page Order (blank to leave off home page)',
@@ -25,6 +35,13 @@ collections:
           widget: 'select',
           options: ['Event'],
           default: ['Event'],
+        }
+      - {
+          label: 'Layout',
+          name: 'layout',
+          widget: 'select',
+          options: ['@layouts/PostLayout.astro'],
+          default: ['@layouts/PostLayout.astro'],
         }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Subtitle', name: 'subtitle', widget: 'string' }
