--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.21.12",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0",
-    "react-responsive": "^9.0.0-beta.3"
+    "@types/node": "*",
+    "astro": "^0.21.2",
+    "autoprefixer": "^10.4.1",
+    "netlify-cli": "^8.6.2",
+    "postcss": "^8.4.5",
+    "react-responsive": "^9.0.0-beta.5",
+    "tailwindcss": "^3.0.9",
+    "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "react": ">=16.8.0"
   }
 }
