--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@data/*": ["src/data/*"],
       "@pages/*": ["src/pages/*"],
       "@lib/*": ["src/lib/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@images/*": ["src/assets/images/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
