--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.11.1",
-    "@astrojs/partytown": "^1.0.1",
+    "@astrojs/image": "^0.12.1",
+    "@astrojs/partytown": "^1.0.2",
     "@astrojs/react": "^1.2.2",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/svelte": "^1.0.2",
-    "@astrojs/tailwind": "^2.1.1",
+    "@astrojs/tailwind": "^2.1.3",
+    "@notionhq/client": "^2.2.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "astro": "^1.6.0",
+    "astro": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0-beta.5",
