Media | Move content into Notion

--- a/src/data/notion.yml
+++ b/src/data/notion.yml
@@ -4,6 +4,10 @@ BANDS: 35ad3c982a4e48f99eb580d16c6f7f63
 # Volunteer
 VOLUNTEER_POSITIONS: a8c62af0272c455eb62a1910a93789be
 
+# Media
+PHOTOS_VIDEO: b389cfe328eb4481904a1e6377b1e413
+ARTICLES: 93aa32c008a145ca9a5db3dac6950a35
+
 # About
 OUR_MISSION: d7ab37128e6f4a8c871f4b5e48ca5016
 CONTACT_US: 541a88eed50b4fc98e1529763fe12777
