Notion | Update block spacing

--- a/src/data/notion.yml
+++ b/src/data/notion.yml
@@ -4,6 +4,9 @@ BANDS: 35ad3c982a4e48f99eb580d16c6f7f63
 # Volunteer
 VOLUNTEER_POSITIONS: a8c62af0272c455eb62a1910a93789be
 
+# Donate
+DONATE_INFO: 906c4b9c963740be9d255d6d0e3e22c1
+
 # Media
 PHOTOS_VIDEO: b389cfe328eb4481904a1e6377b1e413
 ARTICLES: 93aa32c008a145ca9a5db3dac6950a35
