Slideshow | Update slideshow and set content in notion

--- a/src/data/notion.yml
+++ b/src/data/notion.yml
@@ -1,8 +1,14 @@
+# Home
+SLIDESHOW: a0277b332d684c6e9c973f71ded6484e
+
 # Festival
 BANDS: 35ad3c982a4e48f99eb580d16c6f7f63
 
 # Volunteer
 VOLUNTEER_POSITIONS: a8c62af0272c455eb62a1910a93789be
+
+# Supporters
+SUPPORTERS: be62e74c4c0c4fd3ab266f047e632a91
 
 # Donate
 DONATE_INFO: 906c4b9c963740be9d255d6d0e3e22c1
