--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
     "@notionhq/client": "^2.2.3",
+    "@splidejs/svelte-splide": "^0.2.9",
     "@types/marked": "^4.0.8",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
     "astro": "^1.8.0",
     "marked": "^4.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.0-beta.5",
     "svelte": "^3.52.0",
     "tailwindcss": "^3.2.1"
   },
