--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
-    "@notionhq/client": "^2.2.3",
     "@splidejs/svelte-splide": "^0.2.9",
     "@types/marked": "^4.0.8",
     "@types/react": "^18.0.25",
@@ -27,6 +26,7 @@
     "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
-    "@rollup/plugin-yaml": "^4.0.1"
+    "@rollup/plugin-yaml": "^4.0.1",
+    "vite-plugin-toml": "^0.5.0"
   }
 }
