--- a/src/pages/volunteer/_positions.toml
+++ b/src/pages/volunteer/_positions.toml
@@ -1,4 +1,4 @@
-[[open]]
+[[closed]]
 title = 'Booking Assistant'
 description = 'The Booking assistant is primarily responsible for assisting the Booking Lead with their ongoing tasks including booking applications for the festival event scheduling assisting with producing fundraisers and promo shows and other tasks to assist the lead.'
 
