--- a/src/layouts/_footer.toml
+++ b/src/layouts/_footer.toml
@@ -23,6 +23,12 @@ image_url = 'https://ik.imagekit.io/thegoldendino/hfw/sponsors/Transparent-backg
 image_ratio = '100:105'
 
 [[supporters]]
+name = 'Seattle Office of Arts & Culture'
+url = 'https://www.seattle.gov/arts'
+image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/OAC_logo_9fSxWFvCS.jpg?updatedAt=1680894463597'
+image_ratio = '43:39'
+
+[[supporters]]
 name = 'Seattle Department of Neighborhoods'
 url = 'https://www.seattle.gov/neighborhoods'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/seattle-neighborhoods_gbnnL8OPS.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1673058115133'
