--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@astrojs/tailwind": "^3.1.1",
     "@splidejs/svelte-splide": "^0.2.9",
     "@types/marked": "^4.0.8",
+    "@xstate/svelte": "^2.0.1",
     "astro": "^2.1.3",
     "marked": "^4.2.5",
     "svelte": "^3.55.0",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.3.2",
+    "xstate": "^4.37.2"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.0.1",
+    "@skeletonlabs/skeleton": "^1.2.5",
+    "@types/openseadragon": "^3.0.5",
+    "svelte-icons": "^2.1.0",
     "vite-plugin-toml": "^0.5.0"
   }
 }
