Festival App | demo bands and add transitions

--- a/src/pages/festival/_schedule.toml
+++ b/src/pages/festival/_schedule.toml
@@ -4,12 +4,12 @@
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA"
 "stages"= [ "jules", "coffee", "underpass", "artisan" ]
 [days.schedule]
-"18:00" = [ "", "", "", "" ]
-"18:20" = [ "", "", "", "" ]
-"18:40" = [ "", "", "", "" ]
-"19:00" = [ "", "", "", "" ]
-"19:20" = [ "", "", "", "" ]
-"19:40" = [ "", "", "", "" ]
+"18:00" = [ "neon", "", "", "" ]
+"18:20" = [ "chaotic", "", "", "" ]
+"18:40" = [ "filthy", "", "", "" ]
+"19:00" = [ "8bit", "", "", "" ]
+"19:20" = [ "tmb", "", "", "" ]
+"19:40" = [ "burnout", "", "", "" ]
 "20:00" = [ "", "", "", "" ]
 "20:20" = [ "", "", "", "" ]
 "20:40" = [ "", "", "", "" ]
