Festival App | More than just mobile

--- a/src/pages/festival/_stages.toml
+++ b/src/pages/festival/_stages.toml
@@ -41,7 +41,7 @@ y = 0
 mapUrl = "https://goo.gl/maps/npUKYDL3MdtsQctg8"
 
 [rac]
-name = "Rainier Art Stage"
+name = "Rainier Arts Stage"
 x = 0
 y = 0
 mapUrl = "https://goo.gl/maps/DxAg4xmBYWnQR88d9"
