Festival | Bands page

--- a/src/pages/festival/_schedule.toml
+++ b/src/pages/festival/_schedule.toml
@@ -8,9 +8,9 @@
 "medic" = [845.0,1130.0]
 "potty" = [845.0,953.0]
 [days.schedule]
-"18:00" = [ "", "", "", "" ]
-"18:20" = [ "", "", "", "" ]
-"18:40" = [ "", "", "", "" ]
+"18:00" = [ "chaotic", "neon", "tmb", "analog" ]
+"18:20" = [ "chaotic", "neon", "filthy", "neighbors" ]
+"18:40" = [ "onelove", "seismic", "vamola", "kokontaiko" ]
 "19:00" = [ "", "", "", "" ]
 "19:20" = [ "", "", "", "" ]
 "19:40" = [ "", "", "", "" ]
@@ -33,7 +33,7 @@
 "medic" = [480.0,1180.0]
 "potty" = [410.0,1330.0]
 [days.schedule]
-"12:00" = [ "", "", "", "" ]
+"12:00" = [ "artesian", "barque", "emporer", "" ]
 "12:20" = [ "", "", "", "" ]
 "12:40" = [ "", "", "", "" ]
 "13:00" = [ "", "", "", "" ]
