--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/marked": "^4.0.8",
     "@xstate/svelte": "^2.0.1",
     "astro": "^2.1.3",
+    "just-compact": "^3.2.0",
     "marked": "^4.2.5",
     "svelte": "^3.55.0",
     "tailwindcss": "^3.3.2",
