Festival | Clean up desktop styles

--- a/src/pages/festival/_bands.toml
+++ b/src/pages/festival/_bands.toml
@@ -219,7 +219,7 @@ description = "Northside Drill and Step Team. Established in 2000 from Seattle, 
 name = "One Love"
 location = "Seattle, WA"
 url = "http://marcsmason.com/ensembles.html"
-description = ""
+description = "An engaging street band - tuba, horns & percussion - playing music of planet earth at community events, concerts, festivals, rallies, parades, parties and anywhere!"
 
 [reigncity]
 name = "Reign City Riot"
