Festival | Add bands and stages to schedule page

--- a/src/pages/festival/_schedule.toml
+++ b/src/pages/festival/_schedule.toml
@@ -10,8 +10,8 @@
 "medic" = [845.0,1130.0]
 "potty" = [845.0,953.0]
 [days.schedule]
-"18:00" = [ "", "", "", "" ]
-"18:20" = [ "", "", "", "" ]
+"18:00" = [ "chaotic", "filthy", "neon", "8bit" ]
+"18:20" = [ "tmb", "m9", "onelove", "analog" ]
 "18:40" = [ "", "", "", "" ]
 "19:00" = [ "", "", "", "" ]
 "19:20" = [ "", "", "", "" ]
@@ -35,8 +35,8 @@
 "medic" = [480.0,1180.0]
 "potty" = [410.0,1330.0]
 [days.schedule]
-"12:00" = [ "", "", "", "" ]
-"12:20" = [ "", "", "", "" ]
+"12:00" = [ "artesian", "blacksheep", "brasscadia", "brasscals" ]
+"12:20" = [ "burnout", "carnival", "chervona", "chunky" ]
 "12:40" = [ "", "", "", "" ]
 "13:00" = [ "", "", "", "" ]
 "13:20" = [ "", "", "", "" ]
@@ -72,7 +72,7 @@
 "medic" = [875.0,561.0]
 "potty" = [1235.0,1031.0]
 [days.schedule]
-"12:00" = [ "", "" ]
+"12:00" = [ "funkrust", "hungry" ]
 "12:20" = [ "", "" ]
 "12:40" = [ "", "" ]
 "13:00" = [ "", "" ]
